--- a/Report/1a/main.tex
+++ b/Report/1a/main.tex
@@ -9,10 +9,10 @@
 \usepackage{balance} % for balancing columns on the final page
 
 \title[RL Bachelor]{
-    Assignment 1: Exploration \& Dynamic Programming
+    Assignment 1a: Exploration
 }
 
-\author{Peter Huijsen (s4810320) \& Ahmed Al Kurwi (s4476581)}
+\author{Peter Huijsen (s4516303) \& Ahmed Al Kurwi (s4476581)}
 \affiliation{
     Group Number: 43
     \country{} \institution{} \city{} % Just included empty to avoid some warnings
@@ -30,19 +30,10 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{Introduction}
-This assignment explores the use of exploration and dynamic programming in reinforcement learning. 
-
-\section{Part 1: Exploration}
-\subsection{Methods}
-\subsection{Results}
-
-\section{Part 2: Dynamic Programming}
-\subsection{Methods}
-\subsection{Results}
-
+\section{Methods}
+\section{Results}
 \section{Discussion}
 \section{Conclusion}
-
 
 % \begin{figure}[h]
 % \centering
